# parking-hackathon

./: AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml
backend/.opencode/skills/backend-conventions/: SKILL.md  architecture.md  code-conventions.md  commits-and-prs.md  feature-workflow.md
backend/app/: main.py
backend/app/core/: security.py
backend/app/features/auth/controllers/: auth_controller.py
backend/app/features/auth/models/: auth_schema.py
backend/app/features/auth/routes/: auth_routes.py
backend/app/features/auth/services/: auth_service.py
backend/app/features/entries/controllers/: entries_controller.py
backend/app/features/entries/models/: entries_responses.py
backend/app/features/entries/repositories/: entries_repository.py
backend/app/features/entries/routes/: entries_routes.py
backend/app/features/entries/services/: entries_service.py
backend/app/features/exits/controllers/: exits_controller.py
backend/app/features/exits/models/: exits_responses.py
backend/app/features/exits/repositories/: exits_repository.py
backend/app/features/exits/routes/: exits_routes.py
backend/app/features/exits/services/: exits_service.py
backend/app/features/floors/controllers/: floors_controller.py
backend/app/features/floors/models/: floors_responses.py  floors_schemas.py
backend/app/middlewares/: jwt_middleware.py
backend/app/tasks/: email_tasks.py
backend/app/utils/: round_to_50.py
backend/core/: config.py  database.py  redis.py
db/: parking_db_ddl.sql  parking_db_dml.sql  (+1 more)
(+292 files in other folders)
