[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "mysql-connector-python>=9.7.0",
    "pydantic>=2.13.4",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
